fix: component alerts display on mobile

--- a/demo/src/routes/styles.scss
+++ b/demo/src/routes/styles.scss
@@ -168,6 +168,10 @@ header {
 		fill: currentColor;
 	}
 
+	&.icon-16 {
+		width: 16px;
+		height: 16px;
+	}
 	&.icon-20 {
 		width: 20px;
 		height: 20px;
